FlightPath 6.x Changelog
========================

2021-11-16
  Gave "clear all cache" its own permission.
  

2021-11-02
  Added concept of "capacity" to course_search module (stored per-term in the course_rotation_schedule table).  Also added extra CSS when editing course schedule 
  information.


2021-10-28
  Fixed bug in course_search module where the filter for "view courses offered" (and you select the term) was not working as expected
  in all situations, because it was not taking the school_id into account.

  Made the users module filter selection more intuitive.  For example, the school selection, and the behavior when you search
  for a particular name, while a school is selected.  Plus, made sure not to reset ALL filters if you select a letter.  For example,
  you can now select a school, and then select by letters to see the students/users in that school.  The Major pulldown also gets altered
  based on selected school.  Also changed the order of the sub tabs so that Student Users comes second.



2021-10-27
  Added a new "how to customize" folder and custom theme which inherits from fp6_clean theme.  It also includes instructions
  in a README file for copying the theme to your /custom/theme folder and overriding CSS styles.

  Added new function to make CSV strings prettier by adding a space after the comma.  Makes them break correctly in HTML.  Also
  changed term settings fields for advising settings from textfield to textarea, so you can enter more than 255 chars.
  

2021-10-24
  Added ability to designate notification recipients for when a student sends an SMS to a specific line (advisors will *always* receive
  such notifications from their advisees).  This is a setting on the admin/user page for faculty-staff members only.


2021-10-21
  Added new concept to textareas with a maxlength set.  It will now by default show the character count up to the max.

  Completed sending mass txt messages with Engagements, and getting back results in a CSV.