@@ -30,6 +30,7 @@
  * $page_sidebar_left_content      This is the HTML contents that should appear in the left sidebar, if any.
  * $page_top_nav_content           This is HTML for the top navigation content.
  * 
+ * $theme_location    This contains the URL to the selected theme's location.  Ex:  "/custom/themes/custom_fp6_clean"
  * 
 */
 
