@@ -1,9 +1,17 @@
 FlightPath 6.x Changelog
 ========================
 
+2021-11-18
+  Added "spinner" to submit button for duplicating an entire year of degree data.
+
+  Watchdog page converted to use sortable table and pager query.  Also added severity as column.
+  
+
 2021-11-16
   Gave "clear all cache" its own permission.
   
+  Cleaning up CSS.
+
 
 2021-11-02
   Added concept of "capacity" to course_search module (stored per-term in the course_rotation_schedule table).  Also added extra CSS when editing course schedule 
